# MV3D

./: .gitignore  .gitmodules  README.md  clear.sh  download_weights.txt  environment_cpu.yml  make.sh  pythonpath.sh
bag_to_kiiti/lidar/: README.md
bag_to_kitti/lidar/: README.md
data/: .gitignore
data/one_frame/: gt_boxes3d.npy  gt_labels.npy  gt_top_boxes.npy  lidar.npy
experiments/: .gitignore  manager.py  readme.md
experiments/_exp_ped_rpn_smaller_range_flip_y/: task.py
experiments/exp_001_test_model/: task.py
experiments/exp_002_sample/: mv3d.py
experiments/exp_002_test_model/: config.py  mv3d_net.py
src/: clear.sh  config.py  config_car.py  config_ped.py  data.py  data_new.py  dummynet.py  environment_gpu.yml  make.sh  model.py  mv3d.py  mv3d_net.py  mv3d_net_ped.py  play_demo.ipynb  raw_data.py  ros_detector_demo.py  task.py  test_cases.md  tracker.py  tracking.py  train.py  train_data_render.py  trainer.py
src/UKF_Python_to_C++/: Makefile  SharedLib.cpp  classA.cpp  classA.h  samplePython.py
src/kitti_data/: draw.py  io.py
src/lidar_data_prepocress/: velodyne_reader.cpp
src/lidar_data_preprocess/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  liblidar.dylib  lidar_image_generator  lidar_image_generator.cpp  python_call_liblidar_test_osx.py  python_call_liblidar_test_ubuntu.py  velodyne_reader  velodyne_reader.cpp
src/lidar_data_preprocess/2011_09_26_drive_0001_sync/velodyne_points/: timestamps_end.txt
src/lidar_data_preprocess/Python_to_C_Interface/: LidarPreprocess.c  README.md  README.md~  SampleProgram.py
src/lidar_data_preprocess/Python_to_C_Interface/ver2/: LidarPreprocess.c  Makefile  README.md  SampleProgram.py
src/lidar_data_preprocess/Python_to_C_Interface/ver3/: ExampleUsage_Top.py  ExampleUsage_TopAndFront.py  LidarTopAndFrontPreprocess.c  LidarTopPreprocess.c  Makefile  README.md  createTopAndFrontMaps.py  createTopMaps.py
src/lidar_data_preprocess/npyConverter/: CMakeLists.txt  README.md  npy_converter.cpp
src/lidar_data_preprocess/raw/kitti/2011_09_26/2011_09_26_drive_0001_sync/velodyne_points/: timestamps.txt
src/lidar_data_preprocess_cpp_wrapper/: CMakeLists.txt  README.md  lidar_preprocess.cpp  lidar_preprocess.hpp  lidar_preprocess_ext.cpp  python_call_cpp_preprocess_test.py
src/net/: blocks.py  common.py  configuration.py  rcnn_loss_op.py  rcnn_nms_op.py  rcnn_target_op.py  resnet.py  roi_pooling_make.sh  rpn_loss_op.py  rpn_nms_op.py  rpn_target_op.py
src/test/: .gitignore  load_lidar_binary.py  play_demo.ipynb  plot_lidar_bin.m  show_lidar.py  test.py
src/tracklets/: README.md  Tracklet_saver.py  evaluate_tracklets.py  generate_tracklet.py  get_all_tz.py  parse_tracklet.py  parse_tracklet_round.py  tracklet_handling_test.py
src/utils/: timer.py  (+9 more)
utils/ROSviz/projection/: CMakeLists.txt  package.xml
utils/ROSviz/projection/launch/: camera_info.launch  config.rviz  projection.launch  projection_video.launch  tracklet.launch  tracklet_config.rviz  tracklet_interact.launch  tracklet_new.launch  tracklet_ped_test_2_tracklets.launch
utils/ROSviz/projection/scripts/: \  camera_info.py  frames.gv  generate_offset.py  ground_correction.ipynb  interact_tracklet.py  obs_pos.py  projection.py  utils.py  visualize_tracklet.py  visualize_tracklet_2_tracklets.py  visualize_tracklet_with_size_2.py  viz_bbox.py
utils/ROSviz/projection/scripts/.ipynb_checkpoints/: ground_correction-checkpoint.ipynb
utils/didiros/src/radar_driver/: CMakeLists.txt  package.xml
utils/didiros/src/radar_driver/msg/: RadarTracks.msg  Track.msg
(+206 files in other folders)
